# TermuxC

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  TermuxC.md  TermuxC.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
Advanced_explanation/: index.html
Explanation/: index.html
Explanation_Config/: index.html
Explanation_Copy/: index.html
Explanation_Imports/: index.html
Explanation_Tmuxsupport/: index.html
Explanation_fileflag/: index.html
Explanation_helpflag/: index.html
Explanation_interactiveflag/: index.html
Explanation_main/: index.html
Explanation_versionflag/: index.html
Full_explanation/: index.html
_Sidebar/: index.html
docs/: Explanation.md  Explanation_Config.md  Explanation_Copy.md  Explanation_Imports.md  Explanation_Tmuxsupport.md  Explanation_fileflag.md  Explanation_helpflag.md  Explanation_interactiveflag.md  Explanation_main.md  Explanation_versionflag.md  Full_explanation.md  _Sidebar.md  index.md
search/: search_index.json
src/TermuxC/: __init__.py  cli_logic.py  corelogic.py
src/TermuxC.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
