[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TermuxC"
version = "2.0.0"
description = "A lightweight utility to copy text to the device clipboard using OSC 52."
authors = [{name = "Ruizennis"}]

[project.scripts]
Termuxc = "TermuxC:main"
termuxc = "TermuxC:main"

[tool.setuptools]
packages = ["TermuxC"]
package-dir = {"" = "src"}

